Closed Bug 1764283 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::widget::WindowSurfaceProvider::EndRemoteDrawingInRegion]

Categories

(Core :: Widget: Gtk, defect, P3)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 --- unaffected
firefox100 --- unaffected
firefox101 --- fixed

People

(Reporter: aryx, Assigned: stransky)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

3 crashes from 2 different installations. Code got added in bug 1763727.

Crash report: https://crash-stats.mozilla.org/report/index/f06f049e-6089-4954-a03a-511420220412

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0 libxul.so mozilla::widget::WindowSurfaceProvider::EndRemoteDrawingInRegion widget/gtk/WindowSurfaceProvider.cpp:166
1 libxul.so mozilla::wr::RenderCompositorSWGL::CommitMappedBuffer gfx/webrender_bindings/RenderCompositorSWGL.cpp:239
2 libxul.so mozilla::wr::RenderCompositorSWGL::EndFrame gfx/webrender_bindings/RenderCompositorSWGL.cpp:252
3 libxul.so mozilla::wr::RenderThread::UpdateAndRender gfx/webrender_bindings/RenderThread.cpp:537
4 libxul.so mozilla::wr::RenderThread::HandleFrameOneDoc gfx/webrender_bindings/RenderThread.cpp:387
5 libxul.so mozilla::detail::RunnableMethodImpl<mozilla::wr::RenderThread*, void  xpcom/threads/nsThreadUtils.h:1200
6 libxul.so NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:465
7 libxul.so mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:330
8 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:355
9 libxul.so nsThread::ThreadFunc xpcom/threads/nsThread.cpp:385
Flags: needinfo?(stransky)
Has Regression Range: --- → yes

Looks like mWidget is null.

Assignee: nobody → stransky
Flags: needinfo?(stransky)
Priority: -- → P3
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/fc5cd658d9ac
[Wayland] Don't commit to MozContainer when WindowSurfaceProvider internals are released r=emilio
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: