Bug 1764283 [Wayland] Don't commit to MozContainer when WindowSurfaceProvider internals are released r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D143602